tidy up and fix back to top alignment

--- a/src/scss/components/back-to-top.scss
+++ b/src/scss/components/back-to-top.scss
@@ -14,7 +14,8 @@
     }
     i {
       @include oIconsGetIcon('arrow-up', oColorsGetPaletteColor('org-b2c-dark'), 14);
-      padding: 0 5px;
+      padding: 0 2px;
+      background-position: -2px 50%;
     }
   }
 }
